makeXRCompatible not recognized
Categories
(Core :: WebVR, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
Details
Attachments
(1 file)
Reported here: https://github.com/MozillaReality/FirefoxReality/issues/3420
STR:
- Create a canvas
- Make the context xr compatible using makeXRCompatible()
- Wait for the promise to fulfill.
- start a session
- Create a new XR Layer using the session and ths created context
Current Behavior:
The XRLayer's creation fails, stating XRWebGLLayer constructor: Can not create an XRWebGLLayer without first calling makeXRCompatible on the WebGLRenderingContext or WebGL2RenderingContext.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
•
|
||
Currently WebGL xrCompatible option is only set when enabling the xrCompatible attribute in the canvas.getContext() call. We also need to set it to true after succesfull makeXRCompatible() calls
Updated•5 years ago
|
Comment 2•5 years ago
|
||
fwiw three.js just stopped creating the context with "xrCompatible" by default and instead uses "makeXRCompatible()" when XR session is requested so it means currently FxR is broken for the current release of three.js
commit with the change: https://github.com/mrdoob/three.js/commit/97144ea3e7ef0697f6243a639cb62158386e0849
discussion about the decision: https://github.com/mrdoob/three.js/issues/19275
Updated•5 years ago
|
Comment 4•5 years ago
|
||
bugherder |
Description
•